--- a/package.json
+++ b/package.json
@@ -11,15 +11,27 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@graphql-yoga/common": "^3.9.1",
+    "@pothos/core": "^4.6.2",
     "@remix-run/node": "^2.16.5",
     "@remix-run/react": "^2.16.5",
     "@remix-run/serve": "^2.16.5",
+    "graphql": "^16.11.0",
+    "graphql-yoga": "^5.13.4",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "urql": "^4.2.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.5",
+    "@graphql-codegen/typescript": "^4.1.6",
+    "@graphql-codegen/typescript-operations": "^4.6.0",
+    "@graphql-codegen/typescript-urql": "^4.0.0",
     "@remix-run/dev": "^2.16.5",
+    "@swc/core": "^1.11.24",
+    "@swc/register": "^0.1.10",
+    "@types/node": "^22.15.10",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
@@ -33,6 +45,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.1.6",
     "vite": "^6.0.0",
     "vite-tsconfig-paths": "^4.2.1"
