--- a/package.json
+++ b/package.json
@@ -14,22 +14,29 @@
   "dependencies": {
     "@graphql-yoga/common": "^3.9.1",
     "@pothos/core": "^4.6.2",
+    "@radix-ui/react-slot": "^1.2.2",
     "@remix-run/node": "^2.16.5",
     "@remix-run/react": "^2.16.5",
     "@remix-run/serve": "^2.16.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "graphql": "^16.11.0",
     "graphql-yoga": "^5.13.4",
     "isbot": "^4.1.0",
+    "lucide-react": "^0.511.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "urql": "^4.2.2"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@graphql-codegen/cli": "^5.0.5",
+    "@graphql-codegen/cli": "^5.0.6",
     "@graphql-codegen/typescript": "^4.1.6",
     "@graphql-codegen/typescript-operations": "^4.6.0",
     "@graphql-codegen/typescript-urql": "^4.0.0",
+    "@parcel/watcher": "^2.5.1",
     "@remix-run/dev": "^2.16.5",
     "@swc/core": "^1.11.24",
     "@swc/register": "^0.1.10",
