--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc",
-    "codegen": "graphql-codegen --config codegen.ts"
+    "codegen": "graphql-codegen --config codegen.ts",
+    "generate": "NODE_OPTIONS='--loader ts-node/esm' node app/graphql/generate.ts"
   },
   "dependencies": {
     "@graphql-yoga/common": "^3.9.1",
@@ -35,12 +36,13 @@
     "@graphql-codegen/cli": "^5.0.6",
     "@graphql-codegen/typescript": "^4.1.6",
     "@graphql-codegen/typescript-operations": "^4.6.0",
+    "@graphql-codegen/typescript-resolvers": "^4.5.1",
     "@graphql-codegen/typescript-urql": "^4.0.0",
     "@parcel/watcher": "^2.5.1",
     "@remix-run/dev": "^2.16.5",
     "@swc/core": "^1.11.24",
     "@swc/register": "^0.1.10",
-    "@types/node": "^22.15.10",
+    "@types/node": "^22.15.18",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
@@ -60,7 +62,7 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.1.6",
+    "typescript": "^5.8.3",
     "vite": "^6.0.0",
     "vite-tsconfig-paths": "^4.2.1"
   },
